--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -1,26 +1,92 @@
-    - name: Setup vcpkg (Fixed)
+name: Build RustDesk (Windows)
+
+on:
+  workflow_dispatch:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  VERSION: "1.3.9"
+  FLUTTER_VERSION: "3.24.5"
+  RUST_VERSION: "1.75.0"
+  VCPKG_COMMIT_ID: "6f29f12e82a8293156836ad81cc9bf5af41fe836"
+  VCPKG_DEFAULT_TRIPLET: "x64-windows-static"
+  VCPKG_FORCE_SYSTEM_BINARIES: "1"
+
+jobs:
+  build:
+    runs-on: windows-latest
+    timeout-minutes: 120
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
+
+    - name: Install system dependencies
       shell: powershell
       run: |
-        # 确保工作目录存在
-        if (-not (Test-Path "$env:GITHUB_WORKSPACE")) {
-            New-Item -ItemType Directory -Path "$env:GITHUB_WORKSPACE" -Force
-        }
-        
-        # 修复克隆方式 - 先克隆主分支再checkout特定commit
+        Set-ExecutionPolicy Bypass -Scope Process -Force
+        [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
+        iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
+        choco install -y cmake git python llvm nasm
+        refreshenv
+
+    - name: Setup Rust
+      uses: dtolnay/rust-toolchain@v1
+      with:
+        toolchain: ${{ env.RUST_VERSION }}
+        targets: x86_64-pc-windows-msvc
+
+    - name: Setup vcpkg
+      shell: powershell
+      run: |
         $vcpkgDir = "$env:GITHUB_WORKSPACE\vcpkg"
-        if (-not (Test-Path $vcpkgDir)) {
-            git config --global core.longpaths true
-            git clone https://github.com/microsoft/vcpkg $vcpkgDir
-            cd $vcpkgDir
-            git checkout $env:VCPKG_COMMIT_ID
+        
+        # 清理旧目录（如果存在）
+        if (Test-Path $vcpkgDir) {
+            Remove-Item -Recurse -Force $vcpkgDir
         }
         
-        # 验证克隆结果
-        if (-not (Test-Path "$vcpkgDir\bootstrap-vcpkg.bat")) {
-            throw "vcpkg bootstrap file not found after clone"
-        }
-        
-        # 初始化vcpkg
+        # 克隆并checkout特定commit
+        git config --global core.longpaths true
+        git clone https://github.com/microsoft/vcpkg $vcpkgDir
         cd $vcpkgDir
+        git checkout $env:VCPKG_COMMIT_ID
+        
+        # 验证并初始化
+        if (-not (Test-Path "$vcpkgDir\bootstrap-vcpkg.bat")) {
+            throw "vcpkg bootstrap failed: essential files missing"
+        }
         .\bootstrap-vcpkg.bat -disableMetrics
         .\vcpkg integrate install
+        
+        # 验证vcpkg可执行文件
+        if (-not (Test-Path "$vcpkgDir\vcpkg.exe")) {
+            throw "vcpkg executable not found after bootstrap"
+        }
+
+    - name: Install vcpkg dependencies
+      shell: powershell
+      run: |
+        cd "$env:GITHUB_WORKSPACE\vcpkg"
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET `
+          libvpx libyuv openssl opus `
+          ffmpeg[core,avcodec,avformat,swresample,swscale] `
+          aom[core]
+
+    # 以下是后续构建步骤（示例）
+    - name: Build RustDesk
+      shell: powershell
+      run: |
+        python .\build.py --flutter --vram --portable --skip-portable-pack
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: rustdesk-binaries
+        path: |
+          flutter\build\windows\x64\runner\Release\rustdesk.exe
