--- a/.github/workflows/ru.yml
+++ b/.github/workflows/ru.yml
@@ -1,7 +1,7 @@
 name: Build RustDesk (Windows)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}  # 明确启用手动触发
   push:
     branches: [ main ]
   pull_request:
@@ -26,14 +26,26 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Install system dependencies
+    - name: Install system dependencies (Fixed)
       shell: powershell
       run: |
+        # 修复1：完整的Chocolatey安装流程
         Set-ExecutionPolicy Bypass -Scope Process -Force
-        [Net.ServicePointManager]::SecurityProtocol = [Net.SecurityProtocolType]::Tls12
-        iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-        choco install -y cmake git python llvm nasm
-        refreshenv
+        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
+        $chocoScript = Join-Path $env:TEMP 'choco-install.ps1'
+        Invoke-WebRequest -Uri 'https://community.chocolatey.org/install.ps1' -OutFile $chocoScript -UseBasicParsing
+        & $chocoScript
+        Start-Sleep -Seconds 5  # 等待环境更新
+        
+        # 修复2：正确处理环境刷新
+        Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1" -Force
+        $env:PATH = [System.Environment]::GetEnvironmentVariable('PATH', 'Machine') + ';' + 
+                    [System.Environment]::GetEnvironmentVariable('PATH', 'User')
+        
+        # 修复3：避免重复安装LLVM
+        choco upgrade -y cmake git python
+        choco install -y llvm --version=15.0.6 --force
+        choco install -y nasm
 
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@v1
@@ -46,12 +58,12 @@ jobs:
       run: |
         $vcpkgDir = "$env:GITHUB_WORKSPACE\vcpkg"
         
-        # 清理旧目录（如果存在）
+        # 清理旧目录
         if (Test-Path $vcpkgDir) {
             Remove-Item -Recurse -Force $vcpkgDir
         }
         
-        # 克隆并checkout特定commit
+        # 修复4：更可靠的vcpkg克隆方式
         git config --global core.longpaths true
         git clone https://github.com/microsoft/vcpkg $vcpkgDir
         cd $vcpkgDir
@@ -59,34 +71,34 @@ jobs:
         
         # 验证并初始化
         if (-not (Test-Path "$vcpkgDir\bootstrap-vcpkg.bat")) {
-            throw "vcpkg bootstrap failed: essential files missing"
+            throw "vcpkg bootstrap files missing"
         }
-        .\bootstrap-vcpkg.bat -disableMetrics
-        .\vcpkg integrate install
-        
-        # 验证vcpkg可执行文件
-        if (-not (Test-Path "$vcpkgDir\vcpkg.exe")) {
-            throw "vcpkg executable not found after bootstrap"
-        }
+        & "$vcpkgDir\bootstrap-vcpkg.bat" -disableMetrics
+        & "$vcpkgDir\vcpkg" integrate install
 
     - name: Install vcpkg dependencies
       shell: powershell
       run: |
         cd "$env:GITHUB_WORKSPACE\vcpkg"
-        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET `
-          libvpx libyuv openssl opus `
-          ffmpeg[core,avcodec,avformat,swresample,swscale] `
-          aom[core]
+        $ErrorActionPreference = "Stop"
+        
+        # 分步安装依赖
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET libvpx
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET libyuv
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET openssl
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET opus
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET ffmpeg[core,avcodec,avformat,swresample,swscale]
+        .\vcpkg install --triplet=$env:VCPKG_DEFAULT_TRIPLET aom[core]
 
-    # 以下是后续构建步骤（示例）
     - name: Build RustDesk
       shell: powershell
       run: |
         python .\build.py --flutter --vram --portable --skip-portable-pack
 
-    - name: Upload artifact
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: rustdesk-binaries
         path: |
           flutter\build\windows\x64\runner\Release\rustdesk.exe
+        retention-days: 7
